[gd_scene load_steps=8 format=3 uid="uid://qveoiyii483u"]

[ext_resource type="Script" uid="uid://bvwoym3neavlh" path="res://floor.gd" id="1_oj3tl"]
[ext_resource type="Texture2D" uid="uid://bckuvena2bqy7" path="res://assets/icons/coin_01d.png" id="2_cgngl"]
[ext_resource type="Script" uid="uid://cu8jsolm1skhq" path="res://camera_2d.gd" id="2_wd3ws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryoud"]
size = Vector2(2451, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oj3tl"]
size = Vector2(41, 485)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgngl"]
size = Vector2(495, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wd3ws"]
size = Vector2(495, 50)

[node name="Floor" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oj3tl")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1169.5, 456)
shape = SubResource("RectangleShape2D_ryoud")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2246, 200)
shape = SubResource("RectangleShape2D_oj3tl")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-20, 191.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_cgngl")

[node name="wave_barrier" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1177, 190)
rotation = 1.5708
shape = SubResource("RectangleShape2D_wd3ws")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(206, 263.62)

[node name="spawns" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 1063.0
offset_top = 41.0
offset_right = 1123.0
offset_bottom = 72.0
text = "spawn"

[node name="scenery" type="Node2D" parent="."]
z_index = -10

[node name="ColorRect" type="ColorRect" parent="scenery"]
offset_top = -52.0
offset_right = 2227.0
offset_bottom = 402.0
mouse_filter = 2
color = Color(0, 0.792157, 1, 1)

[node name="ColorRect3" type="ColorRect" parent="scenery"]
offset_left = 328.0
offset_top = 67.0
offset_right = 720.0
offset_bottom = 465.0
rotation = 0.785398
scale = Vector2(1.2, 1.2)
mouse_filter = 2
color = Color(0, 0.31, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="scenery"]
offset_left = 2101.0
offset_top = 67.0
offset_right = 2493.0
offset_bottom = 465.0
rotation = 0.785398
scale = Vector2(1.2, 1.2)
mouse_filter = 2
color = Color(0, 0.31, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="scenery"]
offset_left = 1612.0
offset_top = 67.0
offset_right = 2004.0
offset_bottom = 465.0
rotation = 0.785398
scale = Vector2(1.2, 1.2)
mouse_filter = 2
color = Color(0, 0.31, 0, 1)

[node name="ColorRect6" type="ColorRect" parent="scenery"]
offset_left = 986.0
offset_top = 67.0
offset_right = 1378.0
offset_bottom = 465.0
rotation = 0.785398
scale = Vector2(1.2, 1.2)
mouse_filter = 2
color = Color(0, 0.31, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="scenery"]
offset_top = 396.0
offset_right = 2398.0
offset_bottom = 784.0
mouse_filter = 2
color = Color(0, 0.466667, 0, 1)

[node name="wave_cd" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(472, 8)
limit_top = 0
script = ExtResource("2_wd3ws")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="popup" type="Panel" parent="CanvasLayer2"]
offset_left = 798.0
offset_top = 9.0
offset_right = 1137.0
offset_bottom = 212.0

[node name="Label" type="Label" parent="CanvasLayer2/popup"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu" type="Button" parent="CanvasLayer2/popup"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -62.0
offset_right = 103.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Menu"

[node name="next" type="Button" parent="CanvasLayer2/popup"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Next"

[node name="back" type="Button" parent="CanvasLayer2"]
offset_left = 1048.0
offset_top = 16.0
offset_right = 1129.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 32
text = "back"

[node name="coins" type="Control" parent="CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 165.0
offset_bottom = 79.0

[node name="Panel" type="Panel" parent="CanvasLayer2/coins"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer2/coins/Panel"]
layout_mode = 0
offset_left = -1.0
offset_top = -8.0
offset_right = 104.0
offset_bottom = 37.0
pivot_offset = Vector2(53, 23)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer2/coins"]
position = Vector2(-10, 13)
scale = Vector2(3.125, 3.5)
texture = ExtResource("2_cgngl")

[node name="Panel" type="Panel" parent="CanvasLayer2"]
offset_left = 480.0
offset_top = 35.0
offset_right = 618.0
offset_bottom = 75.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="CanvasLayer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_right = -1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="choice_panel" type="Panel" parent="."]
process_mode = 3
top_level = true
z_index = 10
layout_mode = 0
offset_left = 329.0
offset_top = 60.0
offset_right = 740.0
offset_bottom = 588.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="choice_panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 51.0
offset_right = 403.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 48
text = "You Died"
horizontal_alignment = 1
vertical_alignment = 1

[node name="revive" type="Button" parent="choice_panel"]
layout_mode = 0
offset_left = 245.0
offset_top = 327.0
offset_right = 370.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 32
text = "Revive"

[node name="die" type="Button" parent="choice_panel"]
layout_mode = 0
offset_left = 62.0
offset_top = 327.0
offset_right = 162.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 32
text = "Die"

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="wave_cd" to="." method="_on_wave_cd_timeout"]
[connection signal="pressed" from="CanvasLayer2/popup/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer2/popup/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="choice_panel/revive" to="." method="_on_revive_pressed"]
[connection signal="pressed" from="choice_panel/die" to="." method="_on_die_pressed"]
